Made Table Delete Operation
